@@ -111,6 +111,14 @@
 	height: 3vh;
 }
 
+.arrow:active {
+	opacity: 0.8;
+}
+
+.arrow:hover {
+	opacity: 0.8;
+}
+
 .disabled {
 	opacity: 0.5;
 }
